Atualizando dados do curso

--- a/Estudando/index.html
+++ b/Estudando/index.html
@@ -108,6 +108,12 @@
     <div class="not-centered-bg"></div>
     <div class="centered-bg"></div>
 
+    <!-- 21 - Alinhamento de texto -->
+    <p class="text-aligned"> Alinhado a direita </p>
+    <div class="container-center">
+        <h2>Estamos centralizados</h2>
+        <p>Algum texro</p>
+    </div>
 
 </body>
 </html> 
