--- a/Estudando/Aulas/index.html
+++ b/Estudando/Aulas/index.html
@@ -29,6 +29,11 @@
     <p> Eu fui estilizado pelo internal </p>
     <p> Mais um </p>
     <p> E mais outro </p>
+
+    <!-- 36 - Position - Sticky -->
+    <div class="sticky">
+        <span>Eu sou sticky</span>
+    </div>
     <!-- -------------------------------------------------------------- -->
     <!-- 4 - Exeternal css -->
     <h3> Meu titulo verde </h3>
@@ -112,8 +117,85 @@
     <p class="text-aligned"> Alinhado a direita </p>
     <div class="container-center">
         <h2>Estamos centralizados</h2>
-        <p>Algum texro</p>
+        <p>Algum texto</p>
     </div>
+
+    <!-- 22 - Text decoration -->
+    <p class="underline"> Eu tenho underline </p>
+    <p class="line-through"> Eu tenho um risco </p>
+    <a href="#" class="remove-underline"> Sem underline</a>
+
+    <!-- 23 - Transformação de texto -->
+    <p class="upper"> Este texto é em caixa alta </p>
+    <p class="lower"> Este texto é em lower </p>
+
+    <!-- 24 - Espaçamento de letras -->
+    <h2 class="spacing"> Eu tenho um espaçaento maior </h2>
+
+    <!-- 25 - Fontes -->
+    <p class="serif"> Serif </p>
+    <p class="sans-serif"> Sans-serif </p>
+    <p class="monospace"> Monospace </p>
+    <p class="cursive"> Cursive </p>
+    <p class="fantasy"> Fantasy </p>
+
+    <!-- 26 - Estilo de fonte -->
+    <p class="italico">Eu estou em Italico</p>
+    <p class="oblique">Eu estou em Oblíquo</p>
+
+    <!-- 27 - Font weight -->
+    <p class="thin">Mais fino</p>
+    <p class="bold">Estou em bold</p>
+    <p class="bolder">Eu sou a maior fonte!</p>
+
+    <!-- 28 - Font size -->
+    <h4 class="small">Título pequeno</h4>
+    <h4 class="big">Título grande</h4>
+
+    <!-- 29 - Display -->
+    <div class="inline-box">a</div>
+    <div class="inline-box">b</div>
+    <div class="inline-box">c</div>
+    <span class="block">Teste 1</span>
+    <span class="block">Teste 2</span>
+
+    <!-- 30 - Escondendo Elementos -->
+    <p class="invisible">Me encontre se puder </p>
+
+    <!-- 31 - Positions - Static: -->
+    <div class="static">
+        <span>Eu sou estatico!</span>
+    </div>
+    <!-- 32 - Positions - Relative -->
+    <div class="relative">
+        <span>Eu sou relativo</span>
+    </div>
+    <p>Eu sou um paragrafo</p>
+    
+    <!-- 33 - Position - Absolute -->
+    <div class="absolute">
+        <span>Eu sou absoluto</span>
+    </div>
+    <p>Eu sou um paragrafo</p>
+
+    <!-- 34 - Position - Relative + Absolute -->
+    <div class="relative-container">
+        <div class="absolute-1"></div>
+        <div class="absolute-2"></div>
+    </div>
+
+    <!-- 35 - Position - Fixed -->
+    <div class="fixed">
+        <span>Estou fixo</span>
+    </div>
+
+    <!-- 37 Z-index -->
+    <div class="relative-container">
+        <div class="absolute-3"></div>
+        <div class="absolute-4"></div>
+        <div class="absolute-5"></div>
+    </div>
+
 
 </body>
 </html> 
