--- a/Atividades/Projeto-7/index.html
+++ b/Atividades/Projeto-7/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Script -->
     <script src="Js/scripts.js" defer></script>
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="img/544587.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
